RESOLVED FIXED137387
REGRESSION (r165896): UIWebView PDFs have a forced black background
https://bugs.webkit.org/show_bug.cgi?id=137387
Summary REGRESSION (r165896): UIWebView PDFs have a forced black background
Tim Horton
Reported 2014-10-03 02:05:08 PDT
I made a completely wrong change in http://trac.webkit.org/changeset/165896, trying to maintain Safari's black PDF background but swap to white if the PDF was empty to avoid an all-black view; but, we shouldn't be forcing a background color, as some (all?) clients don't use a black background. Remove that code. <rdar://problem/17948411>
Attachments
patch (2.97 KB, patch)
2014-10-03 02:07 PDT, Tim Horton
ddkilzer: review+
Tim Horton
Comment 1 2014-10-03 02:07:01 PDT
Tim Horton
Comment 2 2014-10-03 02:07:01 PDT
Created attachment 239194
David Kilzer (:ddkilzer)
Comment 3 2014-10-03 05:02:57 PDT
Comment on attachment 239193 [details] patch r=me
Tim Horton
Comment 4 2014-10-03 13:28:27 PDT
Note You need to log in before you can comment on or make changes to this bug.